--- a/btn_card_templates/button_card_templates.yaml
+++ b/btn_card_templates/button_card_templates.yaml
@@ -692,15 +692,20 @@ updater_hacs:
         let output = '',
             count = parseInt(entity.state) || 0,
             subtitle = count === 0
-              ? `${variables.translate_no_updates} <b>&larr;</b> ${states['update.hacs_update'].attributes.installed_version || ''}`
-              : `${count} ${count === 1 ? variables.translate_update_available : variables.translate_updates_available} ${String.fromCodePoint('0x1f389')}`;
+                ? `${variables.translate_no_updates} <b>&larr;</b> ${states['update.hacs_update'].attributes.installed_version || ''}`
+                : `${count} ${count === 1 ? variables.translate_update_available : variables.translate_updates_available} ${String.fromCodePoint('0x1f389')}`;
         Object.keys(states).forEach(key => {
           let s = states[key],
               e = s.entity_id,
               a = s.attributes;
-          if (e.includes('update.') && s.state === 'on') {
-            output += `<li><b><a href="#" onclick="window.open('${a.release_url}');">
-            ${a.friendly_name}</a></b> ${a.installed_version} <b>&rarr;</b> ${a.latest_version}</li>`
+          if (e.includes('update.') && s.state === 'on' && a.release_url) {
+              let split_url = a.release_url.split('/'),
+                  name = `${split_url[3]}/${split_url[4]}`,
+                  installed = states['sensor.hacs_installed'].attributes.repositories;
+              if (installed.includes(name)) {
+                  output += `<li><b><a href="#" onclick="window.open('${a.release_url}');">
+                  ${name}</a></b> ${a.installed_version} <b>&rarr;</b> ${a.latest_version}</li>`
+              }
           }
         });
         return `
