--- a/automations/climate.yaml
+++ b/automations/climate.yaml
@@ -27,14 +27,13 @@
         seconds: 0
 
   condition:
-    - condition: not
-      conditions:
-        - condition: state
-          entity_id: climate.thermostat
-          state: 'unavailable'
-        - condition: state
-          entity_id: climate.thermostat
-          state: 'unknown'
+    not:
+      - condition: state
+        entity_id: climate.thermostat
+        state: 'unavailable'
+      - condition: state
+        entity_id: climate.thermostat
+        state: 'unknown'
 
   action:
     - choose:
@@ -42,9 +41,6 @@
           - conditions:
               - condition: trigger
                 id: 'close_to_open'
-              - condition: state
-                entity_id: input_boolean.fresh_air_mode_en
-                state: 'off'
             sequence:
               - service: notify.groot_automation
                 data:
@@ -56,31 +52,34 @@
                     {% else %}
                       The {{ open_windows[:-1] | join(' door, ') }}{{' door,' if open_windows | length > 2 else ' door'}} and {{ open_windows[-1]}} door are open. Suspending thermostat operations.
                     {% endif %}
-              - service: input_boolean.turn_on
-                entity_id: input_boolean.fresh_air_mode_en
+              - service: input_select.select_option
+                target:
+                  entity_id: input_select.master_bedroom_fan_mode
+                data:
+                  option: "{{ states('climate.thermostat') }}"
               - service: climate.set_hvac_mode
                 entity_id: climate.thermostat
                 data:
                   hvac_mode: 'off'
 
-          # ELIF night
+          # ELIF all windows & doors closed
           - conditions:
               - condition: trigger
                 id: 'open_to_close'
-              - condition: state
-                entity_id: input_boolean.fresh_air_mode_en
-                state: 'on'
             sequence:
-              - service: input_boolean.turn_off
-                entity_id: input_boolean.fresh_air_mode_en
               - service: notify.groot_automation
                 data:
                   title: "<b>Info</b>: Detected All Closed Contact Sensors"
-                  message: "Resuming normal thermostat operations"
+                  message: "Resuming normal thermostat operations [{{ states('input_select.master_bedroom_fan_mode') }}]"
               - service: climate.set_hvac_mode
                 entity_id: climate.thermostat
                 data:
-                  hvac_mode: "{{ states('sensor.template_equipment_resume') }}"
+                  hvac_mode: "{{ states('input_select.master_bedroom_fan_mode') }}"
+              - service: input_select.select_option
+                target:
+                  entity_id: input_select.master_bedroom_fan_mode
+                data:
+                  option: "inactive"
 
 ###############################################################################
 # Reset Air Mode
@@ -107,10 +106,14 @@
         seconds: 0
 
   condition:
-    - condition: state
-      entity_id: input_boolean.fresh_air_mode_en
-      state: 'on'
+    not:
+      - condition: state
+        entity_id: input_select.master_bedroom_fan_mode
+        state: "inactive"
 
   action:
-    service: input_boolean.turn_off
-    entity_id: input_boolean.fresh_air_mode_en
+    - service: input_select.select_option
+      target:
+        entity_id: input_select.master_bedroom_fan_mode
+      data:
+        option: "inactive"
