--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -201,7 +201,27 @@ views:
 
           - type: custom:button-card
             entity: fan.master_bedroom
-            name: Master Bedroom
+            name: Master
+            hold_action:
+              !include popup/master_fan.yaml
+            template:
+              - base
+              - icon_fan2
+              - circle
+              - loader
+            variables:
+              circle_input: >
+                [[[
+                  return entity === undefined ?
+                    null :
+                    parseInt(entity.attributes.percentage);
+                ]]]
+
+          - type: custom:button-card
+            entity: fan.pure_cool_link
+            name: Sam
+            hold_action:
+              !include popup/dyson_fan.yaml
             template:
               - base
               - icon_fan2
